[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "^0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.3"
stm32f1xx-hal = { version = "^0.10.0", features = ["stm32f103", "rt", "medium"] }
defmt = "^0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }