[package]
name = "smd-rgb-led"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.3"
panic-halt = "^0.2.0"
panic-probe = { version = "^0.3.1", features = ["print-defmt"] }
stm32f1xx-hal = { version = "^0.10.0", features = ["stm32f103", "rt", "medium"] }
micromath = "^2.0.0"
defmt = "^0.3.4"
defmt-rtt = "^0.4.0"
